# PaperBlog

./: .gitignore  config.ini  generate_blog.py  pdf2md.py  pyproject.toml  txt2md.py
Output/: 2022-11-08-hello-world.md  2022-11-18-no-twitter.md
docs/: 2022-11-08-hello-world.html  2022-11-18-no-twitter.html  CNAME  index.html
templates/: base.html  header.html  index.html  post.html
